public/stylesheets/base.css
/* ... */
/* embeds the openid image in the text field */
input#openid_url {
   background: url(/images/login-bg.gif) no-repeat;
   background-color: #fff;
   background-position: 0 50%;
   color: #000;
   padding-left: 18px;
}

.fieldWithErrors { margin: 0; display: inline-block;}
.fieldWithErrors input, .fieldWithErrors textarea,
.fieldWithErrors select {
  border: 1px solid #c30000;
}

.errorExplanation {
  background: #fbe3e4; 
  border: 1px solid #c30000;
  width: 400px;
  margin: 0 0 10px 0;
}

.errorExplanation h2 {
  font-size: 120%;
  line-height: 120%;
  font-weight: normal;
  padding: 5px;
  color: #fff;
  background: #c30000;
  margin-bottom: 0.2em;
}
.errorExplanation p { 
  padding: 2px 2px 2px 5px;
  margin-bottom: 0;
  margin-top: 0;
}
.errorExplanation ul {
  padding: 5px 10px 10px 25px;
  margin-bottom: 0;
}
.errorExplanation ul li{
    list-style-type: disc;
}

table.listing {
  width: 100%;
}

table.listing tr td {
  padding: 3px;
}

table.listing tr.odd {
  background: #efefef;
}
table.listing thead th {
  font-weight: bold;
  padding: 3px;
  border-bottom: 2px solid #888;
}

ul.committers_list li {
  margin-bottom: 2px;
}

ul .user {
  padding-left: 2px;
}

/* Repository list */

#sidebar ul.repository_list ul {
  margin-left: 10px;
}

.repository_meta ul.repository_list {
  margin: 0;
}

ul.repository_list li {
  padding-left: 18px;
  margin-bottom: 10px;
}
ul.repository_list li.mainline {
  background: url("/images/silk/database_star.png") 0 0 no-repeat;
}

ul.repository_list li.clone {
  background: url("/images/silk/database.png") 0 0 no-repeat;
}

ul.repository_list .user img, ul.repository_list .group img, 
ul.committers .user img, ul.committers .group img {
  float: left;
  margin-top: 1px;
}

ul.repository_list .user a, ul.repository_list .group a,
ul.committers .user a, ul.committers .group a {
  color: #555;
  margin: 0 0 0 5px;
  padding:0;
  font-size: 11.8px;
}

ul.icon_list li {
   margin-bottom: 3px;
}

ul.icon_list li a {
   padding-left: 25px;
   background-repeat: no-repeat;
   background-position: 2px 0px;
}

/* info boxes */

ul.infobox {
  background: #efefef;
  padding: 10px;
  border: 1px solid #ddd;
}

ul.infobox li {
  margin-bottom: 0;
}

ul.infobox li.meta {
  font-size: 11px;
}

table.repository_meta .infobox {
  padding: 5px;
}
table.repository_meta .infobox ul {
  padding: 0;
  margin: 0;
}

/* commit info boxes*/

.commit-infobox {
  clear: both;
  margin-top: 20px;
}

.commit-infobox .commit_message {
  margin: 0;
}
.commit-infobox .commit_message p {
  margin-top: 0;
}

.commit-infobox .commit-meta {
  margin: 10px 1px 0px 5px;
  min-width: 350px;
}

.commit-infobox .commit-meta .people {
  margin:0;
}
.commit-infobox .commit-meta .people small {
  color: #666;
}

.commit-infobox .commit-meta .people .meta {
  border-bottom: 1px solid #ddd;
  margin-bottom: 5px;
  padding-bottom: 5px;
  color: #666;
  font-size: 12px;
  max-width: 500px;
}

.commit-infobox ul li.avatar div {
  float: left;
  display: inline; 
  padding-right: 10px;
  margin-top: 3px;
}

.commit-infobox ul.meta {
  font-size: 12px;
  color: #666;
}

.commit-infobox ul.meta li strong {
  font-weight: normal;
}

.merge_commit_message {
  font-size: 13px;
  margin: 10px;
  margin-bottom: 50px;
}


ul.horizontal {
  display: inline;
  margin-left: 5px !important;
}

ul.horizontal li {
  padding-right: 10px;
  margin-left: 0px;
  display: inline;
}

ul.horizontal li > a {
  background-repeat: no-repeat;
  background-position: 0 0;
  padding-left: 22px !important;
  padding-bottom: 2px;
  padding-top: 2px;
}

ul.horizontal.meta li > a {
  font-size: 11px;
}

div.meta-info {
  text-align: right;
}

.meta-info ul.horizontal li > a {
  font-size: 10px;
  background-image: none !important;
  padding: 0 !important;
}

td.meta-info {
  padding: 0 !important;
  text-align: right;
}

.commit_list .commit_item {
  clear:left;
  margin-bottom: 15px;
}

.commit_message, .commit_message p {
  margin-top: 10px;
  margin-left: 10px;
  font: 95%/105%  "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;  
}
.event_instance .commit_message, .event_instance .commit_message p {
  margin: 2px 0 0 0;
}

.commit_list .commit_item .commit_message {
  margin-left: 40px;
}

small.commit_message {
  margin: 0;
  font: 85%/95%  "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;  
}

.commit_message.inline, .commit_message.inline p {
  display: inline;
}

.commit_message a {
  color: #000;
}
.commit_message a.sha {
  text-decoration: underline;
}

.gravatar {
  background-color: white;
  border: 1px solid #CCCCCC;
  float: left;
  margin-right: 10px;
  padding: 2px;
}

.gravatar_tiny {
  background: transparent;
  border: none;
  margin-right: 5px;
}

.commit_list .commit_item .gravatar {
  margin-top: 5px;
}

ul.project_list li {
  padding-bottom: 1em;
  margin-bottom: 1em;
  border-bottom: 1px solid #dedede;
}

ul.bullet_list li {
  list-style: disc;
  margin-left: 2.5em;
}

.pagination {
  padding: 3px;
  margin: 3px;
  text-align: center;
}
.pagination a {
  padding: 3px 5px 2px 5px;
  margin: 2px;
  border: 1px solid #ddd;
  text-decoration: none;
}
.pagination a:hover, .pagination a:active {
  background: #390;
  color: #fff;
}
.pagination span.current {
  padding: 3px 5px 2px 5px;
  margin: 2px;
  border: 1px solid #999;
  font-weight: bold;
  color: #000;
}
.pagination span.disabled {
  padding: 1px 5px 2px 5px;
  margin: 2px;
  border: 1px solid #eee;
  color: #ddd;
}

.section {
  margin-bottom: 3em;
}

ul.path_breadcrumbs { margin: 0 0 5px 0; }
ul.path_breadcrumbs li {
  display: inline;
  margin:0;
  font-size: 11px;
}

/* tags */

ul.tag_list li {
  display:inline;
}

.tag_size_1 { font-size: 1.0em; }
.tag_size_2 { font-size: 1.2em; }
.tag_size_3 { font-size: 1.4em; }
.tag_size_4 { font-size: 1.6em; }

.large_tags .tag_size_1 { font-size: 1.0em; }
.large_tags .tag_size_2 { font-size: 1.3em; }
.large_tags .tag_size_3 { font-size: 1.6em; }
/* ... */

